@@ -21,6 +21,7 @@ package org.apache.tez.dag.app;
 import java.io.IOException;
 import java.util.List;
 
+import com.google.common.base.Stopwatch;
 import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.fs.FileSystem;
 import org.apache.hadoop.fs.Path;
@@ -116,6 +117,8 @@ public class TestMemoryWithEvents {
   }
   
   private void testMemory(DAG dag, boolean sendDMEvents) throws Exception {
+    Stopwatch stopwatch = new Stopwatch();
+    stopwatch.start();
     TezConfiguration tezconf = new TezConfiguration(defaultConf);
 
     MockTezClient tezClient = new MockTezClient("testMockAM", tezconf, true, null, null, null,
@@ -133,7 +136,8 @@ public class TestMemoryWithEvents {
     DAGStatus status = dagClient.waitForCompletion();
     Assert.assertEquals(DAGStatus.State.SUCCEEDED, status.getState());
     checkMemory(dag.getName(), mockApp);
-    
+    stopwatch.stop();
+    System.out.println("Time taken(ms): " + stopwatch.elapsedMillis());
     tezClient.stop();
   }
   
